tests/snapshots/test__case_1_successful_run_has_no_backtrace.snap
---
source: tests/test.rs
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
INFO  Hello, world!
────────────────────────────────────────────────────────────────────────────────
(HOST) INFO  device halted without error

