tests/snapshots/test__case_7_unsuccessful_run_can_suppress_backtrace.snap
---
source: tests/test.rs
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
ERROR panicked at 'explicit panic'
────────────────────────────────────────────────────────────────────────────────
(HOST) ERROR the program panicked

