tests/snapshots/test__case_8_stack_overflow_can_suppress_backtrace.snap
---
source: tests/test.rs
expression: run_result.output

---
(HOST) INFO  flashing program (2 pages / 8.00 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
INFO  ack(m=10, n=10, SP=20037b88)
INFO  ack(m=10, n=9, SP=2002fb60)
INFO  ack(m=10, n=8, SP=20027b38)
INFO  ack(m=10, n=7, SP=2001fb10)
INFO  ack(m=10, n=6, SP=20017ae8)
INFO  ack(m=10, n=5, SP=2000fac0)
INFO  ack(m=10, n=4, SP=20007a98)
────────────────────────────────────────────────────────────────────────────────
(HOST) ERROR the program has overflowed its stack

