tests/snapshots/test__panic_verbose.snap
---
source: tests/test.rs
expression: run_result.output

---
(HOST) DEBUG vector table: VectorTable { initial_stack_pointer: 2003fbc8, hard_fault: 15b1 }
(HOST) DEBUG RAM region: 0x20000000-0x2003FFFF
(HOST) DEBUG section `.data` is in RAM at 0x2003FBC8 ..= 0x2003FBF7
(HOST) DEBUG section `.bss` is in RAM at 0x2003FBF8 ..= 0x2003FBFF
(HOST) DEBUG section `.uninit` is in RAM at 0x2003FC00 ..= 0x2003FFFF
(HOST) DEBUG valid SP range: 0x20000000 ..= 0x2003FBC7
(HOST) DEBUG found 1 probes
(HOST) DEBUG opened probe
(HOST) DEBUG started session
(HOST) INFO  flashing program (6.57 KiB)
(HOST) INFO  success!
(HOST) DEBUG 261062 bytes of stack available (0x20000000 ..= 0x2003FBC7), using 1024 byte canary
(HOST) TRACE setting up canary took 0.014s (71.21 KiB/s)
(HOST) DEBUG starting device
(HOST) DEBUG Successfully attached RTT
────────────────────────────────────────────────────────────────────────────────
ERROR panicked at 'explicit panic'
────────────────────────────────────────────────────────────────────────────────
(HOST) TRACE reading canary took 0.014s (72.39 KiB/s)
(HOST) DEBUG stack canary intact
(HOST) DEBUG LR=0xFFFFFFF9 PC=0x000015B0
(HOST) DEBUG LR=0x000001C9 PC=0x000008DE
(HOST) DEBUG update_cfa: CFA changed Some(2003fb90) -> 2003fb98
(HOST) DEBUG LR=0x000001D3 PC=0x000001C8
(HOST) DEBUG update_cfa: CFA changed Some(2003fb98) -> 2003fba0
(HOST) DEBUG LR=0x000001BF PC=0x000001D2
(HOST) DEBUG update_cfa: CFA changed Some(2003fba0) -> 2003fbb0
(HOST) DEBUG LR=0x00000195 PC=0x000001BE
(HOST) DEBUG update_cfa: CFA changed Some(2003fbb0) -> 2003fbb8
(HOST) DEBUG LR=0x000001DD PC=0x00000194
(HOST) DEBUG update_cfa: CFA changed Some(2003fbb8) -> 2003fbc0
(HOST) DEBUG LR=0x0000018B PC=0x000001DC
(HOST) DEBUG update_cfa: CFA changed Some(2003fbc0) -> 2003fbc8
(HOST) DEBUG LR=0xFFFFFFFF PC=0x0000018A
(HOST) TRACE demangle Ok("_ZN3lib6inline5__udf17h4878bf20408765ceE") (language=Some(DwLang(1C))) -> Ok("lib::inline::__udf")
(HOST) TRACE demangle Ok("__udf") (language=Some(DwLang(1C))) -> Ok("__udf")
(HOST) TRACE demangle Ok("_ZN8cortex_m3asm3udf17h4c0f9f15c9bfd7bfE") (language=Some(DwLang(1C))) -> Ok("cortex_m::asm::udf")
(HOST) TRACE demangle Ok("_defmt_panic") (language=Some(DwLang(1C))) -> Ok("_defmt_panic")
(HOST) TRACE demangle Ok("_ZN5defmt6export5panic17h3fabd155b5d3f035E") (language=Some(DwLang(1C))) -> Ok("defmt::export::panic")
(HOST) TRACE demangle Ok("_ZN5panic18__cortex_m_rt_main17hdf4a9d08e66ae2a1E") (language=Some(DwLang(1C))) -> Ok("panic::__cortex_m_rt_main")
(HOST) TRACE demangle Ok("main") (language=Some(DwLang(1C))) -> Ok("main")
(HOST) TRACE demangle Ok("ResetTrampoline") (language=Some(DwLang(1C))) -> Ok("ResetTrampoline")
(HOST) TRACE demangle Ok("Reset") (language=Some(DwLang(1C))) -> Ok("Reset")
stack backtrace:
   0: 0x000015b0 @ HardFaultTrampoline
      <exception entry>
   1: 0x000008de @ lib::inline::__udf
        at ./asm/inline.rs:172:5
   2: 0x000008de @ __udf
        at ./asm/lib.rs:49:17
   3: 0x000001c8 @ cortex_m::asm::udf
        at [cortex-m-0.7.3]/src/asm.rs:43:5
   4: 0x000001d2 @ _defmt_panic
        at /tmp/app/src/lib.rs:11:5
   5: 0x000001be @ defmt::export::panic
        at /home/japaric/.cargo/git/checkouts/defmt-52fbd7917982cfac/e021e7d/src/export.rs:266:14
   6: 0x000001be @ panic::__cortex_m_rt_main
        at /tmp/app/src/bin/panic.rs:8:5
   7: 0x00000194 @ main
        at /tmp/app/src/bin/panic.rs:6:1
   8: 0x000001dc @ ResetTrampoline
        at [cortex-m-rt-0.6.14]/src/lib.rs:547:26
   9: 0x0000018a @ Reset
        at [cortex-m-rt-0.6.14]/src/lib.rs:550:13
(HOST) ERROR the program panicked

