tests/snapshots/test__raw_encoding.snap
---
source: tests/test.rs
expression: run_result.output

---
(HOST) INFO  flashing program (5.73 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
INFO  Hello, world!
────────────────────────────────────────────────────────────────────────────────
(HOST) INFO  device halted without error

