tests/snapshots/test__successful_run_has_no_backtrace.snap
---
source: tests/test.rs
expression: run_output

---
(HOST) INFO  flashing program (5.75 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
 INFO  Hello, world!
────────────────────────────────────────────────────────────────────────────────
(HOST) INFO  device halted without error

