tests/snapshots/test__unsuccessful_run_can_suppress_backtrace.snap
---
source: tests/test.rs
expression: run_result.output

---
(HOST) INFO  flashing program (5.82 KiB)
(HOST) INFO  success!
────────────────────────────────────────────────────────────────────────────────
 INFO  main
 ERROR panicked at 'explicit panic'
────────────────────────────────────────────────────────────────────────────────
(HOST) ERROR the program panicked

